<resources>
    <string name="app_name">Weather</string>
    <string name="city">You city</string>
    <string name="search">Search</string>
    <string name="weatherNow">Weather now</string>
    <string name="weatherImage">TODO</string>
    <string name="clock">Clock</string>
    <string name="temp">average temperature + 15</string>
    <string name="dayOfWeek">Day of Week</string>
    <string name="barnaul">Barnaul</string>
    <string name="sochi">Sochi</string>
    <string name="moscow">Moscow</string>
    <string name="backToAct1">Back to Activity 1</string>
    <string name="weather_for_a_week">weather for a week</string>
    <string name="refresh">refresh</string>
    <string name="temperature">temperature</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="wind_speed">wind_speed</string>
</resources>